--- a/front/src/pages/Styles.scss
+++ b/front/src/pages/Styles.scss
@@ -1,3 +1,29 @@
 .GetAllCars{
 
 }
+
+.GetCar{
+  .query-container{
+    display: flex;
+  }
+
+  .result-card{
+    margin: 20px auto 0 auto;
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+    td, th {
+      text-align: left;
+      padding: 3px;
+      color: #000000;
+    }
+    tr td:first-child{
+      font-weight: bold;
+    }
+  }
+}
+
+.Manage{
+
+}
